--- a/src/Strings/en-us/Resources.resw
+++ b/src/Strings/en-us/Resources.resw
@@ -125,6 +125,14 @@
     <value>Dev Home</value>
     <comment>The name of our application</comment>
   </data>
+  <data name="HyperVExtensionDisplayName" xml:space="preserve">
+    <value>Hyper-V Extension</value>
+    <comment>The name of the extension</comment>
+  </data>
+  <data name="CoreExtensionDisplayName" xml:space="preserve">
+    <value>Core Extension</value>
+    <comment>The name of the extension</comment>
+  </data>
   <data name="AllFiles" xml:space="preserve">
     <value>All files</value>
     <comment>Text for a dropdown option in a file picker dialog to show all files in a directory</comment>
